render chapter name, remove border

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "axios": "^0.18.0",
     "create-react-app": "^2.1.8",
     "react": "^16.8.4"
   }
