--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "axios": "^0.18.0",
     "create-react-app": "^2.1.8",
     "react": "^16.8.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
