--- a/ywca_serviceapp/package.json
+++ b/ywca_serviceapp/package.json
@@ -9,7 +9,8 @@
     "preact": "^8.4.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-select": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
